; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_prio_heap.c_heap_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_prio_heap.c_heap_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptr_heap = type { i64, i32 (i8*, i8*)*, i64, i32 }

@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @heap_init(%struct.ptr_heap* %0, i64 %1, i32 %2, i32 (i8*, i8*)* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ptr_heap*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32 (i8*, i8*)*, align 8
  store %struct.ptr_heap* %0, %struct.ptr_heap** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 (i8*, i8*)* %3, i32 (i8*, i8*)** %9, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @kmalloc(i64 %10, i32 %11)
  %13 = load %struct.ptr_heap*, %struct.ptr_heap** %6, align 8
  %14 = getelementptr inbounds %struct.ptr_heap, %struct.ptr_heap* %13, i32 0, i32 3
  store i32 %12, i32* %14, align 8
  %15 = load %struct.ptr_heap*, %struct.ptr_heap** %6, align 8
  %16 = getelementptr inbounds %struct.ptr_heap, %struct.ptr_heap* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 8
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* @ENOMEM, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %5, align 4
  br label %32

22:                                               ; preds = %4
  %23 = load %struct.ptr_heap*, %struct.ptr_heap** %6, align 8
  %24 = getelementptr inbounds %struct.ptr_heap, %struct.ptr_heap* %23, i32 0, i32 2
  store i64 0, i64* %24, align 8
  %25 = load i64, i64* %7, align 8
  %26 = udiv i64 %25, 8
  %27 = load %struct.ptr_heap*, %struct.ptr_heap** %6, align 8
  %28 = getelementptr inbounds %struct.ptr_heap, %struct.ptr_heap* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %9, align 8
  %30 = load %struct.ptr_heap*, %struct.ptr_heap** %6, align 8
  %31 = getelementptr inbounds %struct.ptr_heap, %struct.ptr_heap* %30, i32 0, i32 1
  store i32 (i8*, i8*)* %29, i32 (i8*, i8*)** %31, align 8
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %22, %19
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @kmalloc(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
